--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "todo_db": "server=localhost;user=root;password=1234;database=todo_db"
-  }
+  "AllowedHosts": "*"
 }
 
