--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "todo_db": "server=localhost;user=root;password=1234;database=todo_db"
 }
 
