--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "todo_db": "server=localhost;user=root;password=1234;database=todo_db"
+  "ConnectionStrings": {
+    "todo_db": "server=localhost;user=root;password=1234;database=todo_db"
+  }
 }
 
